[package]
name = "rusty-zig"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An attempt at making a Zig lexer and parser(hopefully) in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
